
	* Fixed apps in examples to use req.scriptURI instead of the
	web-server dependent CGI variable SCRIPT_NAME.

	* Added DOCUMENT_ROOT CGI variable in HTTP mode.

	* Added Java EE Servlet support: ESXX can now run inside
	a J2EE application server, such as Glassfish to Tomcat.

	* XSLT parameters may now be specified via the property
	'params' in the ESXX.Response object.

0.9.20090201
	* Fixed bug #14765: req.scriptURI has problems with encoded
	URI:s.

	* Fixed problems with the init script that made chkconfig not
	recognize it.

	* The XMIME/XMTP parser and serializer how handles all text/*
	MIME types, not just text/plain.

	* esxx.include now takes a secondary argument, scope, which
	can be used to specify in what scope the included file should 
	be evaluated in.  If unspecified, the global scope is used
	just like before.

	* When using esxx.include from a function, files are now
	first resolved relative the working directory.

	* esxx.global is now available, and refers to the global
	scope.
	
	* The HTTP protocol handler now simply throws an ESXX.Response
	object if the HTTP status in load(), save(), append() or
	remove() is not 2xx.

	* Added IPS (OpenSolaris) package support, including SVC
	management script and manifest.

	* Added proper PackageMaker (OSX), DEB and RPM support. CPack
	is now only used for the Windows packages.

	* Added ESXX.Response methods: toString(), valueOf() and
	[from Java] getDefaultValue().

	* Added a dns: URI protocol handler, with LDAP URI-inspired
	query part.

	* The --no-handler option now takes a regex argument which
	is matched against SERVER_SOFTWARE. This makes it possible
	to use both Apache and Lighttpd with the same ESXX server
	by specifying "--no-handler=lighttpd.*" (which happens to
	be the default, so you don't actually have to specify it).

	* SOAP handlers can now match on SOAPAction and URI just like
	HTTP handlers.

	* XSLT stylesheets can now match on content type and URI,